# proxy-suite

./: .gitmodules  NODE_AUTH.md  README.md  README_zh_CN.md  RELEASE.md
.github/workflows/: build-installers.yml  build.yaml  flclash-build.yml  server-ci.yml  verge-build-installers.yml
clash-verge/: Cargo.toml  Changelog.md  README.md  pnpm-lock.yaml
clash-verge/.github/workflows/: build-installers.yml  frontend-check.yml  lint-clippy.yml  release.yml  rustfmt.yml
clash-verge/server/: .env.example  .gitignore  Cargo.toml  README.md
clash-verge/server/src/: clash.rs  config.rs  email.rs  error.rs  notify.rs  state.rs  telegram.rs
clash-verge/server/src/routes/: admin.rs  client.rs  mod.rs  tg.rs
clash-verge/src/: main.tsx
clash-verge/src-tauri/: Cargo.toml  tauri.conf.json
clash-verge/src-tauri/src/: lib.rs
clash-verge/src-tauri/src/cmd/: mod.rs  node_auth.rs
clash-verge/src/hooks/: use-connection-data.ts
clash-verge/src/pages/: connections.tsx  logs.tsx  settings.tsx
clash-verge/src/services/: cmds.ts
clash-verge/src/types/: global.d.ts
flclash/: README.md  README_zh_CN.md
flclash/.github/workflows/: build.yaml
flclash/lib/views/: tools.dart
lib/common/: node_auth.dart
lib/manager/: core_manager.dart
lib/models/: node_auth.dart
lib/providers/: action.dart
lib/views/: node_auth.dart
server/: DEPLOY.md
server/docs/: multi-node.md
server/scripts/: add-hysteria2-node.sh
server/src/: auth.rs  db.rs  main.rs  models.rs
test/common/: node_auth_test.dart
test/models/: node_auth_test.dart
(+20 files in other folders)
