[package]
name = "nodeauth-server"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Auth Server + admin panel for Clash Verge node device-binding two-step auth (component one)"

# Standalone workspace so it stays isolated from the Tauri app build.
[workspace]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "macros",
] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
lettre = { version = "0.11", default-features = false, features = [
  "smtp-transport",
  "tokio1-rustls-tls",
  "builder",
  "pool",
] }
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
